Création du controller Dashboard

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,6 +66,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if app.request.attributes.get('_route') == 'app_mission_index' %}active{% endif %}" href="{{ path('app_mission_index') }}">Missions</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link href="{{ path('app_mission_index') }}">Missions</a>
+                    </li>
                 </ul>
             </div>
         </div>
