Ajout + Modification de commentaires

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,10 +88,11 @@
     <!-- Navbar -->
     <header class="navbar navbar-expand-lg navbar-dark bg-marvel-red shadow">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold fs-4 text-gold" href="{{ path('app_dashboard') }}">Dashboard</a>
+            <a class="navbar-brand fw-bold fs-4 text-gold" href="{{ path('app_dashboard') }}">Dashboard</a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            {# Barre de navigation #}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
@@ -110,6 +111,7 @@
                         <a class="nav-link {% if app.request.attributes.get('_route') == 'app_mission_index' %}active{% endif %}" href="{{ path('app_mission_index') }}">Missions</a>
                     </li>
                 </ul>
+                {# Ajout d'un mode Claire/Sombre #}
                 <button class="btn btn-outline-light ms-3" id="toggleDarkMode">🌙 Mode Sombre</button>
             </div>
         </div>
