--- a/templates/super_hero/index.html.twig
+++ b/templates/super_hero/index.html.twig
@@ -68,6 +68,6 @@
         </div>
     {% endif %}
     
-    <a href="{{ path('app_super_hero_new') }}" class="btn btn-primary mt-3">Créer un nouveau Super Héros</a>
+    <a href="{{ path('app_super_hero_new') }}" class="btn btn-danger">Créer un nouveau Super Héros</a>
 </div>
 {% endblock %}
